// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render App correctly when activities are fetched successfully 1`] = `
<App>
  <div>
    <Component>
      <Menu
        fixed="top"
        inverted={true}
      >
        <div
          className="ui inverted top fixed menu"
        >
          <Container>
            <div
              className="ui container"
            >
              <MenuItem
                header={true}
              >
                <div
                  className="header item"
                  onClick={[Function]}
                >
                  <img
                    alt="logo"
                    src="/assets/logo.png"
                  />
                  Social Me Die
                </div>
              </MenuItem>
              <MenuItem
                name="Activities"
              >
                <div
                  className="item"
                  onClick={[Function]}
                >
                  Activities
                </div>
              </MenuItem>
              <MenuItem>
                <div
                  className="item"
                  onClick={[Function]}
                >
                  <Button
                    as="button"
                    content="Create Activity"
                    positive={true}
                  >
                    <Ref
                      innerRef={
                        Object {
                          "current": <button
                            class="ui positive button"
                          >
                            Create Activity
                          </button>,
                        }
                      }
                    >
                      <RefFindNode
                        innerRef={
                          Object {
                            "current": <button
                              class="ui positive button"
                            >
                              Create Activity
                            </button>,
                          }
                        }
                      >
                        <button
                          className="ui positive button"
                          onClick={[Function]}
                        >
                          Create Activity
                        </button>
                      </RefFindNode>
                    </Ref>
                  </Button>
                </div>
              </MenuItem>
            </div>
          </Container>
        </div>
      </Menu>
    </Component>
    <List>
      <div
        className="ui list"
        role="list"
      >
        <ListItem
          key="1"
        >
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Fake Activity 1
          </div>
        </ListItem>
        <ListItem
          key="2"
        >
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Fake Activity 2
          </div>
        </ListItem>
      </div>
    </List>
  </div>
</App>
`;

exports[`Should render App correctly with empty activity list 1`] = `
<App>
  <div>
    <Component>
      <Menu
        fixed="top"
        inverted={true}
      >
        <div
          className="ui inverted top fixed menu"
        >
          <Container>
            <div
              className="ui container"
            >
              <MenuItem
                header={true}
              >
                <div
                  className="header item"
                  onClick={[Function]}
                >
                  <img
                    alt="logo"
                    src="/assets/logo.png"
                  />
                  Social Me Die
                </div>
              </MenuItem>
              <MenuItem
                name="Activities"
              >
                <div
                  className="item"
                  onClick={[Function]}
                >
                  Activities
                </div>
              </MenuItem>
              <MenuItem>
                <div
                  className="item"
                  onClick={[Function]}
                >
                  <Button
                    as="button"
                    content="Create Activity"
                    positive={true}
                  >
                    <Ref
                      innerRef={
                        Object {
                          "current": <button
                            class="ui positive button"
                          >
                            Create Activity
                          </button>,
                        }
                      }
                    >
                      <RefFindNode
                        innerRef={
                          Object {
                            "current": <button
                              class="ui positive button"
                            >
                              Create Activity
                            </button>,
                          }
                        }
                      >
                        <button
                          className="ui positive button"
                          onClick={[Function]}
                        >
                          Create Activity
                        </button>
                      </RefFindNode>
                    </Ref>
                  </Button>
                </div>
              </MenuItem>
            </div>
          </Container>
        </div>
      </Menu>
    </Component>
    <List>
      <div
        className="ui list"
        role="list"
      />
    </List>
  </div>
</App>
`;
